--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <div class="container">
       <a class="navbar-brand d-flex align-items-center" href="#home" aria-label="Oliqon home">
         <img src="./Olicon_3.jpeg" alt="Oliqon logo" class="brand-logo me-2" />
-        <span class="brand-wordmark text-white">Oliqon</span>
+        <!-- <span class="brand-wordmark text-white">Oliqon</span> -->
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -253,54 +253,16 @@
   <section id="contact" class="section-pad bg-light">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-lg-10">
-          <div class="row g-4 align-items-stretch">
-            <div class="col-md-6" data-aos="fade-right">
-              <div class="h-100 p-4 p-lg-5 bg-white border rounded-4 shadow-soft">
-                <h2 class="h3 mb-3">Let’s Connect</h2>
-                <p class="text-secondary">Tell us about your goals, and we’ll reach out with next steps.</p>
-                <form class="needs-validation" novalidate>
-                  <div class="mb-3">
-                    <label for="name" class="form-label">Your Name</label>
-                    <input type="text" class="form-control" id="name" placeholder="Jane Doe" required />
-                    <div class="invalid-feedback">Please add your name.</div>
-                  </div>
-                  <div class="mb-3">
-                    <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email" placeholder="you@company.com" required />
-                    <div class="invalid-feedback">Please provide a valid email.</div>
-                  </div>
-                  <div class="mb-3">
-                    <label for="message" class="form-label">Message</label>
-                    <textarea id="message" class="form-control" rows="4" placeholder="What challenge can we help you solve?" required></textarea>
-                    <div class="invalid-feedback">Please add a short message.</div>
-                  </div>
-                  <div class="d-grid d-sm-flex gap-3">
-                    <button class="btn btn-primary px-4" type="submit">
-                      <i class="bi bi-send me-2"></i>Send
-                    </button>
-                    <a class="btn btn-outline-secondary" href="mailto:hello@olicon.com" aria-label="Send us an email">Email us instead</a>
-                  </div>
-                  <small class="d-block mt-3 text-secondary">This demo form uses client‑side validation only. Connect it to your backend or a service like Formspree for production.</small>
-                </form>
-              </div>
-            </div>
-            <div class="col-md-6" data-aos="fade-left">
-              <div class="h-100 p-4 p-lg-5 border rounded-4 bg-white">
-                <h3 class="h5">Why Oliqon</h3>
-                <ul class="list-unstyled mt-3">
-                  <li class="d-flex align-items-start gap-2 mb-2"><i class="bi bi-check2-circle text-success"></i><span>Outcome‑focused innovation programs</span></li>
-                  <li class="d-flex align-items-start gap-2 mb-2"><i class="bi bi-check2-circle text-success"></i><span>Strategy‑to‑delivery capabilities under one roof</span></li>
-                  <li class="d-flex align-items-start gap-2 mb-2"><i class="bi bi-check2-circle text-success"></i><span>Collaborative ways of working and capability transfer</span></li>
-                </ul>
-                <div class="mt-4 p-3 border rounded-3 bg-light">
-                  <div class="d-flex align-items-center gap-3">
-                    <i class="bi bi-bezier2 fs-2 text-primary" aria-hidden="true"></i>
-                    <p class="m-0">“Innovation is a catalyst for transformation when aligned to long‑term goals.”</p>
-                  </div>
-                </div>
-              </div>
-            </div>
+        <div class="col-lg-8" data-aos="fade-up">
+          <div class="p-4 p-lg-5 bg-white border rounded-4 shadow-soft text-center">
+            <h2 class="h3 mb-3">Let’s Connect</h2>
+            <p class="text-secondary mb-4">We respond promptly to all inquiries.</p>
+            <a class="btn btn-primary btn-lg px-4" href="mailto:hello@olicon.com">
+              <i class="bi bi-envelope me-2"></i>hello@olicon.com
+            </a>
+            <!-- <div class="mt-3">
+              <a class="link-dark" href="mailto:hello@olicon.com">Prefer your own email app? Click here.</a>
+            </div> -->
           </div>
         </div>
       </div>
@@ -312,7 +274,16 @@
     <div class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-3">
       <p class="m-0">© <span id="year"></span> Oliqon. All rights reserved.</p>
       <div class="d-flex flex-wrap align-items-center gap-3">
-        <a class="link-light d-flex align-items-center" href="mailto:hello@olicon.com" aria-label="Email Oliqo
+        <a class="link-light d-flex align-items-center" href="mailto:hello@olicon.com" aria-label="Email Oliqon">
+          <i class="bi bi-envelope me-2"></i> hello@olicon.com
+        </a>
+        <a class="link-light link-underline" href="#home">Home</a>
+        <a class="link-light link-underline" href="#services">What We Do</a>
+        <a class="link-light link-underline" href="#approach">Our Approach</a>
+        <a class="link-light link-underline" href="#contact">Contact</a>
+      </div>
+    </div>
+  </footer>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
