--- a/index.html
+++ b/index.html
@@ -274,9 +274,9 @@
     <div class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-3">
       <p class="m-0">© <span id="year"></span> Oliqon. All rights reserved.</p>
       <div class="d-flex flex-wrap align-items-center gap-3">
-        <a class="link-light d-flex align-items-center" href="mailto:hello@olicon.com" aria-label="Email Oliqon">
+        <!-- <a class="link-light d-flex align-items-center" href="mailto:hello@olicon.com" aria-label="Email Oliqon">
           <i class="bi bi-envelope me-2"></i> hello@olicon.com
-        </a>
+        </a> -->
         <a class="link-light link-underline" href="#home">Home</a>
         <a class="link-light link-underline" href="#services">What We Do</a>
         <a class="link-light link-underline" href="#approach">Our Approach</a>
