fixed wrong email

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <h2 class="h3 mb-3">Let’s Connect</h2>
             <p class="text-secondary mb-4">We respond promptly to all inquiries.</p>
             <a class="btn btn-primary btn-lg px-4" href="mailto:hello@olicon.com">
-              <i class="bi bi-envelope me-2"></i>hello@olicon.com
+              <i class="bi bi-envelope me-2"></i>hello@oliqon.com
             </a>
             <!-- <div class="mt-3">
               <a class="link-dark" href="mailto:hello@olicon.com">Prefer your own email app? Click here.</a>
